[project]
name = "comfyui-randomsize"
description = "A ComfyUI custom node that randomly selects a height and width pair from a list in a config file"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/JerryOrbachJr/ComfyUI-RandomSize"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jerry-orbach-jr"
DisplayName = "ComfyUI-RandomSize"
Icon = ""
